--- a/client/src/Components/CustomSpinner/CustomSpinner.scss
+++ b/client/src/Components/CustomSpinner/CustomSpinner.scss
@@ -1,19 +1,13 @@
 
 .spinner{
-  position: absolute;
-  height: 50px;
-  width: 50px;
+  margin: 10px 0;
+  height: 20px;
+  width: 20px;
   animation-name: spin;
   animation-duration: 1.7s;
   animation-iteration-count: infinite;
 }
 
-.spinner-wrapper{
-  position: absolute;
-  height: 50px;
-  width: 200px;
-  border-color: black;
-}
 
 @keyframes spin {
   0%{
