--- a/client/src/scss/MovieItem.scss
+++ b/client/src/scss/MovieItem.scss
@@ -10,6 +10,10 @@
   margin: 10px .5rem;   
   background-color: colors.$go-blue;
   color: colors.$go-dark-blue;
+  &:hover {
+    background-color: colors.$amazon;
+    color: colors.$amazon-dark;
+  }
 }
 
 @media (max-width: 800px){
