--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,11 @@ body {
   height: inherit;
 }
 
+a{
+  margin: 0;
+}
+
+
 @media(prefers-color-scheme: dark){
   body{
     background-color: #191919;
