--- a/client/src/scss/MovieEditor.scss
+++ b/client/src/scss/MovieEditor.scss
@@ -3,7 +3,7 @@
 
 
 .movie-editor{
-  border: solid orange 2px;
+  margin: auto 0.5rem;
   @include grid.flex-col;
   .form-row{
     @include grid.flex-col;
@@ -11,7 +11,9 @@
       font-size: 1.3rem; 
     }
     input{
-      width: 100%;
+      height: 20px;
+      border-radius: 10px;
+      
     }
   }
 
