--- a/client/src/scss/MovieEditor.scss
+++ b/client/src/scss/MovieEditor.scss
@@ -3,7 +3,6 @@
 
 
 .movie-editor{
-  margin: auto 0.5rem;
   @include grid.flex-col;
   .form-row{
     @include grid.flex-col;
@@ -11,9 +10,9 @@
       font-size: 1.3rem; 
     }
     input{
-      height: 20px;
-      border-radius: 10px;
-      
+      height: 30px;
+      border-radius: 13px; 
+      font-size: 1.3rem; 
     }
   }
 
