--- a/client/src/scss/colors.scss
+++ b/client/src/scss/colors.scss
@@ -5,3 +5,10 @@ $amazon: #ff9900;
 $amazon-dark: #a16100;
 $go-blue: #87d4e4;
 $go-dark-blue: #3b8492;
+
+$success-text: #08B000;
+$success-background: #7cff75;
+$warning-background: #F2FF4E;
+$warning-text: #B4C204;
+$danger-background: #FF9E9E;
+$danger-text: #CA0000
